Adjust copyMessages()